Made a new personal site

--- a/index.html
+++ b/index.html
@@ -1,6 +1,108 @@
-<h1>
-TEMPORARY SITE
-</h1>
-<a href='gan.html'>
-GAN PAGE FOR U NOW I GUESS
-</a>
+<html lang="en">
+
+<head>
+	<meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Main Page</title>
+	<link rel="stylesheet" href="style.css">
+	<link rel="shortcut icon" href="" class="Image" />
+</head>
+
+<body>
+    <ul class="TopNavBar">
+        <li><a href="#about">About Me</a></li>
+        <li><a href="#interests">Interests</a></li>
+        <li><a href="#publications">Publications</a></li>
+        <li><a href="#projects">Projects</a>
+        <li style="float:right"><a href="#contacts">Contacts</a></li>
+    </ul>
+    <div style="padding:100px;margin-top:30px;background-color:#121d31;">
+
+        <h1 id="about">About Me</h1>
+        <hr>
+        <p>
+            Hi! My name is Punnawish Thuwajit, otherwise known with my nickname "Konkuad" or "KK". 
+            I am a computer science (to-be) undergraduate student this semester. 
+            Apart from my studies, I work as a research assistant (RA) and an Artificial Intelligence (AI) engineer too.
+            I am interested in cutting-edge AI technologies, as well as the mathematics behind them.
+            This site will tell you more about who I am, what I like, and what I can do to put a smile on your face!
+        </p>
+        <h2>Personal Information</h2>
+        <ul class="intext">
+            <li><b>Birthday</b>September 14, 2003 (currently 18 years of age)</li>
+            <li><b>Origin</b>Madison, Wisconsin, USA</li>
+            <li><b>Nationalities</b>US - THA</li>
+        </ul>
+        <h2>Education</h2>
+        <ul class="intext">
+            <li><b>High-School</b>Suankularb Wittayalai School [THA]</li>
+            <li><b>Undergraduate</b>University of Wisconsin, Madison [USA]</li>
+            <li><b>Postgraduate</b>(Not Yet)</li>
+        </ul>
+        <h2>Languages</h2>
+        <ul class="intext">
+            <li><b>Spoken</b>English (proficient), Thai (native)</li>
+            <li><b>Programming</b>Python (proficient), JavaScript (beginner)</li>
+            <li><b>Markup</b>Markdown, HTML</li>
+        </ul>
+        <h2>Likes</h2>
+        <ul class="intext">
+            <li><b>Food</b>Italian and Japanese Cuisine</li>
+            <li><b>Media</b>Anime, Manga, Light Novels</li>
+            <li><b>Academics</b>Mathematics, Machine Learning</li>
+        </ul>
+
+        <h1 id="interests">Interests</h1>
+        <hr>
+        <p>
+            These are topics regarding my research and AI engineering I have done for the past few years.
+            As such, I'm open for further contacts regarding projects in these categories.
+        </p>
+        <ul class="intext">
+            <li>Bio-signal Processing</li>
+            <li>Topic Modelling</li>
+            <li>Generative Adversarial Networks</li>
+            <li>Pathological Computer Vision</li>
+        </ul>
+
+        <h1 id="publications">Publications</h1>
+        <hr>
+        <h2>2022</h2>
+        <ul class="intext">
+            <li>(awaiting preparation and revision)</li>
+        </ul>
+        <h2>2021</h2>
+        <ul class="intext">
+            <li>Thuwajit, Punnawish, et al. "EEGWaveNet: Multi-Scale CNN-Based Spatiotemporal Feature Extraction for EEG Seizure Detection." IEEE Transactions on Industrial Informatics (2021).</li>
+        </ul>
+        <h2>2020</h2>
+        <ul class="intext">
+            <li>THUWAJIT, Punnawish, et al. "Explainable Deep Convolutional Neural Network in EEG Seizure Onset Prediction." IEICE Proceedings Series 63.SA1-6 (2020).</li>
+        </ul>
+
+        <h1 id="projects">Projects</h1>
+        <hr>
+        <ul class="intext">
+            <li><a href="https://github.com/IoBT-VISTEC/EEGWaveNet">EEGWaveNet</a></li>
+            <li><a href="gan.html">GANime</a></li>
+        </ul>
+
+        <h1 id="contacts">Contacts</h1>
+        <hr>
+        <p>
+            You can contact me via these media. 
+            Please contact me formally via my formal contacts, and use my personal contacts for a more casual/informal conversation.
+        </p>
+        <h2>Formal Contacts</h2>
+        <ul class="intext">
+            <li><b>Email</b>thuwajit@wisc.edu</li>
+        </ul>
+        <h2>Personal Contacts</h2>
+        <ul class="intext">
+            <li><b>Email</b>konkuad2@gmail.com</li>
+            <li><b>Facebook</b>Punnawish Thuwajit</li>
+            <li><b>Discord</b>Chroma LXIX#1250</li>
+            <li><b>Tel</b>(+66) 632152654</li>
+        </ul>
+    </div>
+</body>
