--- a/index.html
+++ b/index.html
@@ -83,8 +83,8 @@
         <h1 id="projects">Projects</h1>
         <hr>
         <ul class="intext">
-            <li><a href="https://github.com/IoBT-VISTEC/EEGWaveNet">EEGWaveNet</a></li>
-            <li><a href="gan.html">GANime</a></li>
+            <li><a style="color:white;" href="https://github.com/IoBT-VISTEC/EEGWaveNet">LINK</a> EEGWaveNet</li>
+            <li><a style="color:white;" href="gan.html">LINK</a> GANime</li>
         </ul>
 
         <h1 id="contacts">Contacts</h1>
