--- a/index.html
+++ b/index.html
@@ -80,11 +80,15 @@
             <li>THUWAJIT, Punnawish, et al. "Explainable Deep Convolutional Neural Network in EEG Seizure Onset Prediction." IEICE Proceedings Series 63.SA1-6 (2020).</li>
         </ul>
 
-        <h1 id="projects">Projects</h1>
+        <h1 id="projects">Projects (will update, I have a lot more)</h1>
         <hr>
         <ul class="intext">
             <li><a target="_blank" style="color:white;" href="https://github.com/IoBT-VISTEC/EEGWaveNet">LINK</a> EEGWaveNet</li>
+            <li>PPGWaveNet (like EEGWaveNet but for respiratory signals)</li>
             <li><a target="_blank" style="color:white;" href="gan.html">LINK</a> GANime</li>
+            <li>Transformer Chatbot Tutorial (still writing)</li>
+            <li>AnimeIndex : Anime Landscape Analysis</li>
+            <li>Transformer GANime (better than the old GANime)</li>
         </ul>
 
         <h1 id="contacts">Contacts</h1>
