definitely not a rickroll
read title bruh

--- a/mainPage.html
+++ b/mainPage.html
@@ -1,4 +1,6 @@
 <h1>
 GET RICKROLLED LOL
 </h1>
+<a href="index.html">Go here to the actual main page!</a>
+</br>
 <img src="https://c.tenor.com/_4YgA77ExHEAAAAd/rick-roll.gif">
