--- a/aboutme.html
+++ b/aboutme.html
@@ -30,17 +30,17 @@
         <a href="index.html">Home</a>
         <a href="aboutme.html">About me</a>
         <a href="#">Interests</a>  
-        <a href="#">Publications</a>
-        <a href="#">Projects</a>
-        <a href="apps.html">Apps</a>
+        <a href="publications.html">Publications</a>
+        <a href="projects.html">Projects</a>
+        <a href="origami.html">Origami</a>
         <a href="#">Blogs</a>
     </div>
     <div class="mainContainer">
         <h1 style="font-size: 40px;">
-            Punnawish Thuwajit
+            Punnawish Thuwajit - About me
         </h1>
         <p>
-            Machine Learning Engineer / Researcher / Computer Sciences Student
+            Deep Learning Researcher / Origami Artist
         </p>
         <div class="contentBlock">
             <h1 style="font-size: 35px;">About me</h1>
@@ -52,14 +52,12 @@
                 Hi, I am <strong>Punnawish Thuwajit</strong>, a passionate problem solver wielding the power of artificial intelligences.
             </p>
             <p>
-                Right now, I'm an incoming freshman in <strong>Computer Sciences at the University of Wisconsin Madison</strong>.
+                Right now, I'm an a freshman in <strong>Mathematics Computer Sciences at the University of Wisconsin Madison</strong>.
                 I love playing with big amount of data, and deriving solutions out of how those data are structured. 
                 That is, I am a data scientist and a machine learning engineer.
             </p>
-            <p>
-                In addition to college,  I am also working as a research intern at several institutes. 
-                Moreover, my colleages and I established our startup <strong>AIXOLOTL</strong>, specializing in providing
-                <strong>AI solutions</strong> for data magangement and scientific research at a reasonable price.
+            <p>In addition to college, my life is geared towards research. You can see more at 
+                <strong><a href="interests.html" style="color:#000000; text-decoration:none;">Interests</a></strong>.</p>
             </p>
             <p>This page will guide you through getting to know me more. Thank you for your visit!</p>
 
@@ -121,7 +119,8 @@
             <h2 style="font-size: 25px; padding-bottom:8;padding-top:10;">Hobbies</h2>
             <p>
                 Aside from my obvious hobby of programming (especially about machine learning), I have the skill of <strong>Origami</strong>, the art of
-                Japanese paper folding. Here are some models I have made in the past - each from one uncut sheet of square paper!.
+                Japanese paper folding. Here are some models I have made in the past - each from one uncut sheet of square paper!. 
+                See <strong><a href="origami.html" style="color:#000000; text-decoration:none;">Origami</a></strong>
             </p>
         </div>
     </div>
