--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
         <a href="index.html">Home</a>
         <a href="aboutme.html">About me</a>
         <a href="#">Interests</a>  
-        <a href="#">Publications</a>
-        <a href="#">Projects</a>
-        <a href="apps.html">Apps</a>
+        <a href="publications.html">Publications</a>
+        <a href="projects.html">Projects</a>
+        <a href="origami.html">Origami</a>
         <a href="#">Blogs</a>
     </div>
     <div class="mainContainer">
@@ -40,25 +40,25 @@
             Punnawish Thuwajit
         </h1>
         <p>
-            Machine Learning Engineer / Researcher / Computer Sciences Student
+            Deep Learning Researcher / Origami Artist
         </p>
         <img src='images/myface.png' style="width: 300px; border-radius: 30px; padding: 10px;"/>
         <div class="contentBlock">
             <h1 style="font-size: 35px;">Welcome to my website!</h1>
             <hr>
-            <p style="font-size: 15px; color: rgb(68, 68, 68);">last updated : Jul 2022</p>
+            <p style="font-size: 15px; color: rgb(68, 68, 68);">last updated : Oct 2022</p>
             <h2 style="font-size: 25px; padding-bottom: 8;">About the site</h2>
             <p>
-                This website is the online collection of my profile, works, products, and contacts. Here are the pages you can visit from here or the navigation bar!
+                This website is the online collection of my profile and contacts. Here are the pages you can visit from here or the navigation bar!
             </p>
             <ul style="padding-left: 40px;">
                 <li><strong><a href="index.html" style="color:#000000; text-decoration:none;">Home page</a></strong>, this page you're on!</li>
                 <li><strong><a href="aboutme.html" style="color:#000000; text-decoration:none;">About me</a></strong>, details about who I am.</li>
-                <li>Details on my research <strong><a href="index.html" style="color:#000000; text-decoration:none;">interests</a></strong></li>
+                <li>[TBA] Details on my research <strong><a href="index.html" style="color:#000000; text-decoration:none;">interests</a></strong></li>
                 <li>A list of my <strong><a href="index.html" style="color:#000000; text-decoration:none;">publications</a></strong></li>
-                <li><strong><a href="index.html" style="color:#000000; text-decoration:none;">Projects</a></strong> and codes released to public.</li>
-                <li>A collection of my <strong><a href="apps.html" style="color:#000000; text-decoration:none;">applications</a></strong> to play with.</li>
-                <li>Stories in <strong><a href="index.html" style="color:#000000; text-decoration:none;">blogs</a></strong> I write.</li>
+                <li><strong><a href="projects.html" style="color:#000000; text-decoration:none;">Projects</a></strong> and codes released to public.</li>
+                <li>A collection of my <strong><a href="apps.html" style="color:#000000; text-decoration:none;">origami</a></strong> designs.</li>
+                <li>[TBA] Stories in <strong><a href="index.html" style="color:#000000; text-decoration:none;">blogs</a></strong> I write.</li>
             </ul>
             The website is still under development, stay tuned!
             <h2 style="font-size: 25px; padding-bottom: 8; padding-top: 10;">Contact me!</h2>
